Motion paths range not correct (+ keyframe placement error) #30097

Closed
opened 2012-02-07 13:37:45 +01:00 by Olivier Amrein · 5 comments
Member

%%%please open the attached file: it is a simple default scene with cube animated in straight line from 0 to 100
I enabled motion path Around frame. it should display 40 frames before, and 40 after.
but it stops at 50 .
go to In Range tab,
scrub the End value to 20.
Click Calculate Path, it does not update…
workaround is to Clear Paths, then recalculate path
now set End to 100. Clear path, recalculate path.
Go back to Around frame tab.
Now the initial problem is kind of fixed…

I understand the path calculation in not interactive (depsgraph?) but I do not think you first need to clear path, to recalculate…

also Around Frame and In Range are to separate tab, that look supposedly independent….

furthermore you can see the green square (keyframe at frame 50) is misplaced, plus it blinks when you scrub frames

sorry if this is a bit messy, it just shows some problems with motion paths

tested on trunk r43948 , release 2.61 , mac and windows%%%

%%%please open the attached file: it is a simple default scene with cube animated in straight line from 0 to 100 I enabled motion path Around frame. it should display 40 frames before, and 40 after. but it stops at 50 . go to In Range tab, scrub the End value to 20. Click Calculate Path, it does not update… workaround is to Clear Paths, then recalculate path now set End to 100. Clear path, recalculate path. Go back to Around frame tab. Now the initial problem is kind of fixed… I understand the path calculation in not interactive (depsgraph?) but I do not think you first need to clear path, to recalculate… also Around Frame and In Range are to separate tab, that look supposedly independent…. furthermore you can see the green square (keyframe at frame 50) is misplaced, plus it blinks when you scrub frames sorry if this is a bit messy, it just shows some problems with motion paths tested on trunk r43948 , release 2.61 , mac and windows%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Fixed the current frame indicator bug.

The main problem in this report though I think is related to some mistakes made with the UI design for this stuff. It's been on my todo list for a while, but I'll try to accelerate a fix for this.%%%

%%%Fixed the current frame indicator bug. The main problem in this report though I think is related to some mistakes made with the UI design for this stuff. It's been on my todo list for a while, but I'll try to accelerate a fix for this.%%%
Member

%%%Fixed the bug regarding changing the path range.

GUI changes in progress...%%%

%%%Fixed the bug regarding changing the path range. GUI changes in progress...%%%
Member

%%%Just committed some changes for this. Hopefully this improves the situation.%%%

%%%Just committed some changes for this. Hopefully this improves the situation.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30097
No description provided.