Partial Bugfix [#30097] : Current frame indicator on Motion Paths drawn incorrectly

When the current frame occurs outside the current visible range a given motion
path, the point lookup was seeking past the ends of the path's point cache,
causing sporadic flickering of current frame indicator at 0,0,0.